ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: okteto-httpd-test
spec:
  rules:
    - host: 'okteto-httpd-test.officialmkl.cloud.okteto.net'
      http:
        paths:
          - path: '/'
            backend:
              serviceName: okteto-httpd-test
              servicePort: 8080
